--- a/package.json
+++ b/package.json
@@ -9,6 +9,14 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^5.2.5"
+    "@fontsource/roboto-mono": "^5.1.1",
+    "@tailwindcss/vite": "^4.0.4",
+    "astro": "^5.2.5",
+    "tailwindcss": "^4.0.4"
+  },
+  "devDependencies": {
+    "@types/node": "^22.13.1",
+    "tsconfig.json": "^1.0.11",
+    "typescript": "^5.7.3"
   }
 }
