refactor: scene architecture and layout
- Add BaseScene class for common Babylon.js setup
- Add SceneLayout component for consistent UI
- Move vector visualization to dedicated VectorScene component
- Update Layout to handle scene containers
- Clean up index page to use new components
- Fix styling and canvas rendering issues

--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@babylonjs/core": "^7.48.1",
+    "@babylonjs/inspector": "^7.48.1",
     "@fontsource/roboto-mono": "^5.1.1",
     "@tailwindcss/vite": "^4.0.4",
     "astro": "^5.2.5",
